pkg/ibmvpc/examples/out/analysis_out/iks_config_object_all_vpcs__with_grouping_no_lbAbstract_EdgeConsistent.txt
Endpoint connectivity for VPC ky-test-vpc
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP src-ports: 443
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP src-ports: 443
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP src-ports: 443
Service Network (all ranges) => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
Service Network (all ranges) => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
Service Network (all ranges) => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
Service Network (all ranges) => iks-node[192.168.0.4] : All Connections
Service Network (all ranges) => iks-node[192.168.16.4] : All Connections
Service Network (all ranges) => iks-node[192.168.20.4] : All Connections
Service Network (all ranges) => iks-node[192.168.24.4] : All Connections
Service Network (all ranges) => iks-node[192.168.32.4] : All Connections
Service Network (all ranges) => iks-node[192.168.36.4] : All Connections
Service Network (all ranges) => iks-node[192.168.4.4] : All Connections
Service Network (all ranges) => iks-node[192.168.40.4] : All Connections
Service Network (all ranges) => iks-node[192.168.8.4] : All Connections
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
Service Network (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-clusterid:1[192.168.32.5] => Service Network (all ranges) : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.32.4],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => Service Network (all ranges) : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.36.4],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => Service Network (all ranges) : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.40.4],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-node[192.168.0.4] => Service Network (all ranges) : All Connections
iks-node[192.168.0.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => Service Network (all ranges) : All Connections
iks-node[192.168.16.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => Service Network (all ranges) : All Connections
iks-node[192.168.20.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => Service Network (all ranges) : All Connections
iks-node[192.168.24.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.32.4] => Service Network (all ranges) : All Connections
iks-node[192.168.32.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.36.4] => Service Network (all ranges) : All Connections
iks-node[192.168.36.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => Service Network (all ranges) : All Connections
iks-node[192.168.4.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.40.4] => Service Network (all ranges) : All Connections
iks-node[192.168.40.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => Service Network (all ranges) : All Connections
iks-node[192.168.8.4] => iks-clusterid:1[192.168.32.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-clusterid:1[192.168.36.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-clusterid:1[192.168.40.5],kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
